# vllm-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml  run_all_benchmarks.sh
.github/workflows/: ci.yml
bench/: __init__.py  run_benchmark.py  smoke_runner.py
bench/analysis/: __init__.py  aggregate.py  aggregate_matrix.py  audit_prompts.py  audit_traces.py  recompute_summary.py  report.py
bench/datasets/: preprocess.py
bench/metrics/: __init__.py  latency.py  throughput.py
bench/prompts/: __init__.py  bucketing.py  templates.py
bench/runner/: __init__.py  client.py  loadgen.py  repro_failures.py  run_bench.py  run_full.py  run_full_matrix.py  run_manifest.py  run_smoke.py  run_smoke_matrix.py  select_smoke.py
infra/terraform/: main.tf  outputs.tf  startup.sh  tfplan  variables.tf
server/: __init__.py
server/docker/: Dockerfile  requirements.lock.txt
server/vllm/: __init__.py  compose.template.yaml  compose.yaml  launch.py  launcher.py
server/vllm/configs/: C1.yaml  C2.yaml  C3.yaml  C4.yaml  C5.yaml  C6.yaml  C7.yaml  C8.yaml
tests/: __init__.py  test_config_parse.py  test_metrics.py  test_smoke.py  test_trace_invariants.py
